cambio de graficos y posicionamiento

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <html lang="en"> 
 <head>
     <meta charset="UTF-8" />
-    <title>Javascript practica</title>
+    <title>Trabajo 02: Javascript</title>
     <script src="js/phaser.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
